--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
         </nav>
 
     <ul class="header ">
-        <li class="header-contacts"><a href="mailto:info@devsudio.com" class="contacts"><span><svg class="icon-mail"><use href="./images/symbol-defs.svg#icon-envelope"></use></svg></span>info@devsudio.com</a></li>
-        <li class="header-contacts"><a href="tel:+380961111111" class="contacts "><span><svg class="icon-mail"><use href="./images/symbol-defs.svg#icon-smartphone"></use></svg></span>+38 096 111 11 11</a></li>
+        <li class="header-contacts"><a href="mailto:info@devsudio.com" class="contacts"><span><svg class="icon-mail"><use href="./images/icons.svg#icon-envelope"></use></svg></span>info@devsudio.com</a></li>
+         <li class="header-contacts"><a href="tel:+380961111111" class="contacts "><span><svg class="icon-mail"><use href="./images/icons.svg#icon-smartphone"></use></svg></span>+38 096 111 11 11</a></li>
     </ul>
     </div>
 
@@ -142,28 +142,28 @@
                 <li class="invite-item">
                     <a class="invite-link" href="">
                         <svg class="invite-icon">
-                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="invite-item">
                     <a class="invite-link" href="">
                         <svg class="invite-icon">
-                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="invite-item">
                     <a class="invite-link" href="">
                         <svg class="invite-icon">
-                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="invite-item">
                     <a class="invite-link" href="">
                         <svg class="invite-icon">
-                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
