--- a/index.html
+++ b/index.html
@@ -17,26 +17,25 @@
 </head>
 <body>
 <main>
-                                <!-- backdrop -->
+     <!-- backdrop -->
     <section class="backdrop is-hidden" data-modal>
-        <div class="modal"><button class="button-modal" data-modal-close>
-            <svg class="close-icon">
+        <div class="modal"><button type="button" class="button-modal" data-modal-close>
+                <svg class="close-icon" height="18px" width="18px">
                 <use href="./images/icons.svg#icon-close"></use>
-            </svg>
-</button></div>        
+                </svg></button>
+        </div>       
     </section>
     <header>
         <div class="container header ">
-        <nav class="inline-block">
+        <nav class="header-navigation">
             <a class="logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span> </a>
-            <ul class="header">
-                <li class="link"><a href="./index.html" class="active"> Студия</a></li>
+            <ul class="header-list">
+                <li class="link"><a href="./index.html" class="active"> Студия</a><div class="navigation-line"></div></li>
                 <li class="link"><a href="./portfolio.html" class="choise">Портфолио</a></li>
                 <li class="link"><a href="" class="choise">Контакты</a></li>
             </ul>
         </nav>
-      
-            <ul class="header ">
+            <ul class="header-list">
                 <li class="header-contacts"><a href="mailto:info@devsudio.com" class="contacts"><span><svg class="icon-mail"><use href="./images/icons.svg#icon-envelope"></use></svg></span>info@devsudio.com</a></li>
                 <li class="header-contacts"><a href="tel:+380961111111" class="contacts "><span><svg class="icon-mail"><use href="./images/icons.svg#icon-smartphone"></use></svg></span>+38 096 111 11 11</a></li>
             </ul>
@@ -46,7 +45,7 @@
      <!-- first section service-->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button class="hero-button" data-modal-open> Заказать услугу</button>
+            <button class="hero-button" data-modal-open type="button"> Заказать услугу</button>
         </section>
         <!-- second section advantage -->
         <section class="advantage">
