--- a/portfolio.html
+++ b/portfolio.html
@@ -18,16 +18,16 @@
 <body>
 <header>
     <div class="container header ">
-        <nav class="inline-block">
+        <nav class="header-navigation">
             <a class="logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span> </a>
-            <ul class="header">
+            <ul class="header-list">
                 <li class="link"><a href="./index.html" class="choise">Студия</a></li>
-                <li class="link"><a href="./portfolio.html" class="active">Портфолио</a></li>
+                <li class="link"><a href="./portfolio.html" class="active">Портфолио</a><div class="navigation-line"></div></li>
                 <li class="link"><a href="" class="choise">Контакты</a></li>
             </ul>
         </nav>
 
-    <ul class="header ">
+    <ul class="header-list">
         <li class="header-contacts"><a href="mailto:info@devsudio.com" class="contacts"><span><svg class="icon-mail"><use href="./images/icons.svg#icon-envelope"></use></svg></span>info@devsudio.com</a></li>
          <li class="header-contacts"><a href="tel:+380961111111" class="contacts "><span><svg class="icon-mail"><use href="./images/icons.svg#icon-smartphone"></use></svg></span>+38 096 111 11 11</a></li>
     </ul>
@@ -48,78 +48,153 @@
         </ul>
         <ul class="list">
             <li class="projeckt-item">
-                <a href=""><img src="./images/block1.jpg" alt="Сайт на макбуке" width="370" class="pic">
-                   <div class="padding2">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block1.jpg" alt="Сайт на макбуке" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                            платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
+                    <div class="padding2">
                         <h2>Технокряк</h2>
-                        <p>Веб-сайты</p>
-                   </div>
+                        <p class="projeckt-type">Веб-сайты</p>
+                    </div>
                 </a>
+                
             </li>
             <li class="projeckt-item">
-                <a href=""><img src="./images/block2.jpg" alt="Баскетболисты" width="370" class="pic">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block2.jpg" alt="Баскетболисты" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                            платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                     <div class="padding2">
                         <h2>Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
+                        <p class="projeckt-type">Дизайн</p>
                     </div>
                 </a>
             </li>
             <li class="projeckt-item">
-                <a href=""><img src="./images/block3.jpg" alt="Лого ресторана" width="370" class="pic">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block3.jpg" alt="Рыба" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                            платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                     <div class="padding2">
                         <h2>Ресторан Seafood</h2>
-                        <p>Приложения</p>
+                        <p class="projeckt-type">Приложения</p>
                     </div>
                 </a>
             </li>
             <li class="projeckt-item">
-                <a href="" ><img src="./images/block4.jpg" alt="Наушники" width="370" class="pic">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block4.jpg" alt="Наушники" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                     <div class="padding2">
                         <h2>Проект Prime</h2>
-                        <p>Маркетинг</p>
+                        <p class="projeckt-type">Маркетинг</p>
                     </div>
                 </a>
             </li>
             <li class="projeckt-item">
-                <a href=""><img src="./images/block5.jpg" alt="Коробки" width="370" class="pic">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block5.jpg" alt="Коробки" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                     <div class="padding2">
                         <h2>Проект Boxes</h2>
-                        <p>Приложения</p>
+                        <p class="projeckt-type">Приложения</p>
                     </div>
                 </a>
             </li>
             <li class="projeckt-item">
-                <a href=""><img src="./images/block6.jpg" alt="Сайт на моноблоке" width="370" class="pic">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block6.jpg" alt="Сайт на моноблоке" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                            платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                     <div class="padding2">
                         <h2>Inspiration has no Borders</h2>
-                        <p>Веб-сайты</p>
+                        <p class="projeckt-type">Веб-сайты</p>
                     </div>
                 </a>
             </li>
             <li class="projeckt-item">
-                <a href=""><img src="./images/block7.jpg" alt="Книга Limited Edition" width="370" class="pic">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block7.jpg" alt="Книга Limited Edition" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                     <div class="padding2">
                         <h2>Издание Limited Edition</h2>
-                        <p>Дизайн</p>
+                        <p class="projeckt-type">Дизайн</p>
                     </div> 
                 </a>
             </li>
             <li class="projeckt-item">
-                <a href=""><img src="./images/block8.jpg" alt="Бирка ЛАБ" width="370" class="pic">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block8.jpg" alt="Бирка ЛАБ" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                            платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                     <div class="padding2">
                         <h2>Проект LAB</h2>
-                        <p>Маркетинг</p>
+                        <p class="projeckt-type">Маркетинг</p>
                     </div>
                 </a>
             </li>
             <li class="projeckt-item">
-                <a href=""><img src="./images/block9.jpg" alt="Приложение на ноутбуке" width="370" class="pic">
+                <a href="" class="projeckt-site">
+                    <div class="overflow">
+                        <img src="./images/block9.jpg" alt="Приложение на ноутбуке" width="370" class="pic">
+                        <div class="hidden-description">
+                            <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                            платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </div>
                     <div class="padding2">
                         <h2>Growing Business</h2>
-                        <p>Приложения</p>
+                        <p class="projeckt-type">Приложения</p>
                     </div>
                 </a>
             </li>
-        
         </ul>
       </div>
   </section>
